- updating the styles of the event list, the add event button, the map zoom buttons, the nav bar - squashing some bugs - fixing various code snippets/cleaning up some code

--- a/src/style/map.scss
+++ b/src/style/map.scss
@@ -9,9 +9,8 @@
 }
 
 .mapAndButton {
-  width: 95%;
-  height: 75%;
-  margin: 16px;
+  width: 100%;
+  height: 100%;
   position: relative;
   display: inline-block;
 }
@@ -20,6 +19,13 @@
   position: absolute;
   top: 10px;
   right: 10px;
+}
+
+.add-event-btn-container {
+  position: absolute;
+  bottom: 10px;
+  right: 10px;
+
 }
 
 .refocusButton {
