--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -91,6 +91,11 @@ side-drawer {
   height: 90%;
   background-color: white;
   position: relative;
+  margin-top: 60px;
+}
+
+.main-container {
+  position: relative;
 }
 
 #user-event-menu {
